added hardest decisions txt

--- a/website/hardestdec.html
+++ b/website/hardestdec.html
@@ -37,9 +37,27 @@
 </div>
     <div class="container">
       <h2>Hardest Decisions</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque adipiscing odio libero, aliquam accumsan augue ultricies sollicitudin. Nulla sed nisi sodales, scelerisque lorem lacinia, elementum magna. Pellentesque convallis magna non suscipit lobortis. Nulla justo metus, convallis sed vestibulum eget, molestie nec quam. Donec non turpis sed quam porta feugiat. Integer pharetra, lectus molestie vestibulum tristique, velit eros facilisis nibh, nec ultrices arcu nibh vitae justo. Sed adipiscing, libero sit amet auctor ullamcorper, dui sapien pretium enim, in tristique ante enim et arcu. Aliquam placerat est vitae sapien consectetur, sed pharetra libero auctor. Duis porta sem ut justo ullamcorper imperdiet. Curabitur sed laoreet sem. Ut consectetur, felis vel cursus condimentum, metus neque pharetra purus, sed tristique nunc lacus sit amet ipsum. In varius nunc id risus suscipit, id gravida ante bibendum.</p>
-          
-          <p>Donec quis tempus quam. Suspendisse semper nisl vel nisi pulvinar molestie. Duis pulvinar non sem nec dictum. Pellentesque pretium libero non feugiat molestie. Nulla facilisi. Duis et bibendum felis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+          <p>One of the hardest decisions for our group was mainly how to decide what we wanted the top navigation bar to include. We looked at many different university sites, such as University of Chicago and Boston University for more insight. Most university sites had the “About Us”, “Academics”, “Admissions” and “Research”. We had a hard time deciding between keeping “Athletics” or removing it and putting “Campus Life” instead as one of the main tabs on the navigation bar. Our group chose remove “Athletics” and put that element under “Campus Life”. The main reason we chose to go with “Campus Life” was that the term is pretty general, and so Athletics, Arts, and Student Activities related elements could all fall under Campus Life if a prospective student or current student was browsing through the page.</p>
 
-          <p>Integer tristique lectus non accumsan interdum. Nulla id convallis neque. Suspendisse blandit luctus accumsan. Curabitur a eros adipiscing, ullamcorper velit vitae, posuere ipsum. Duis vitae sem gravida, consequat nisi vitae, tempus orci. In sit amet eros ante. Proin non leo ac purus vestibulum tincidunt. Cras faucibus metus in massa rutrum venenatis. Sed pellentesque lacus et semper tempor. Pellentesque tristique aliquam risus, id ultrices odio rhoncus non. Mauris mi mauris, cursus quis neque at, vestibulum ornare sem. Aenean scelerisque sodales consequat. Morbi nec enim est. Vestibulum euismod eros id commodo facilisis. Integer dui lacus, malesuada non eros eu, dignissim egestas augue. Nullam ipsum nulla, egestas vel lorem vel, porta malesuada mi.</p>
-    </div>
+          <p> Another tough decision our group made was the location of our logo. Deciding to keep the logo on the left hand side was what we originally were going to stick with; however, seeing other websites gave us the idea to move our logo to the center of the page. Centering our logo is a bold move but we like the idea that our logo is the first thing users see on a page. </p>
+
+          <p>For the most part, lots of hard decisions were made based on what type of design layout we wanted. We wanted to have a clean design with organized information and more consistency. The information architecture of our design was developed so that a user could easily know where they were located on the website and find things instinctually. We reorganized some of the elements in the drop down menus for each tab on the navigation tab, so that students could find things in the related fields.</p> 
+ 
+ 
+
+    <hr>
+
+    <footer>
+        <p>&copy; Jasmine Chan, Michelle Wang, Ratnaganadi Paramita 2014</p>
+      </footer>
+
+       </div> <!-- /container -->
+
+
+    <!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="../../dist/js/bootstrap.min.js"></script>
+  </body>
+</html>
