--- a/website/index.html
+++ b/website/index.html
@@ -27,7 +27,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container">
-        <h1>Information Architecture Redesign for Georgia State Univeristy's Website</h1>
+        <h1>Information Architecture Redesign for www.gsu.edu</h1>
         <h2> By: Jasmine Chan, Ratnaganadi Paramita, and Michelle Wang</h2>
 
         <p>Our group worked together to accomplish and understand the constraints and freedom involved in choosing an information architecture. We referenced critique (Usability Evaluation) to improve Georgia State University's website design.</p>
