--- a/website/index.html
+++ b/website/index.html
@@ -42,7 +42,7 @@
         <div class="col-md-4">
           <h2>Deliverables</h2>
           <p>Below are the deliverables that our group completed to create the best usability redesign for GSU's website.</p>
-           	<p><a href="userpersonas.pdf" target="_blank">User Personas (PDF)</a></p>
+           	<p><a href="userp.pdf" target="_blank">User Personas (PDF)</a></p>
         	<p><a href="competitiveanal.pdf" target="_blank">Competitive Analysis (PDF)</a></p>
         	<p><a href="hardestdec.html" target="_blank">Hardest Decisions</a></p>
         
