--- a/website/hardestdec.html
+++ b/website/hardestdec.html
@@ -36,7 +36,7 @@
   <p><a href="index.html" target="_blank">Back to Project Page</a></p>
 </div>
     <div class="container">
-      <h2>Hardest Decisions</h2>
+      <h2>Hardest Decisions by michelleeee</h2>
           <p>One of the hardest decisions for our group was mainly how to decide what we wanted the top navigation bar to include. We looked at many different university sites, such as University of Chicago and Boston University for more insight. Most university sites had the “About Us”, “Academics”, “Admissions” and “Research”. We had a hard time deciding between keeping “Athletics” or removing it and putting “Campus Life” instead as one of the main tabs on the navigation bar. Our group chose remove “Athletics” and put that element under “Campus Life”. The main reason we chose to go with “Campus Life” was that the term is pretty general, and so Athletics, Arts, and Student Activities related elements could all fall under Campus Life if a prospective student or current student was browsing through the page.</p>
 
           <p> Another tough decision our group made was the location of our logo. Deciding to keep the logo on the left hand side was what we originally were going to stick with; however, seeing other websites gave us the idea to move our logo to the center of the page. Centering our logo is a bold move but we like the idea that our logo is the first thing users see on a page. </p>
