--- a/website/about.html
+++ b/website/about.html
@@ -83,6 +83,16 @@
 			  <div class="tab-pane" id="campuslife">...</div>
 			</div>
 		</div>
+		<footer>
+			<div>
+			</div>
+			<div>
+			</div>
+			<div>
+			</div>
+			<div>
+			</div>
+		</footer>
     	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
