--- a/website/about.html
+++ b/website/about.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 	<head>
     	<meta charset="utf-8">
     	<meta http-equiv="X-UA-Compatible" content="IE=edge">
     	<meta name="viewport" content="width=device-width, initial-scale=1">
+    	<meta name="description" content="Information Architecture Assignment">
+    	<meta name="author" content="Jasmine Chan, Ratnaganadi Paramita, and Michelle Wang">
     	<title>Georgia State University</title>
 		<!-- Bootstrap -->
 		<link type="text/css" rel="stylesheet" href="css/subpage.css"/>
@@ -44,7 +46,7 @@
 			<div class="tab-content">
 			  <div class="tab-pane active" id="about">
 			  	<div id="content-container">
-			  		<div id="content-header"><p>About Georgia State University</p></div>
+			  		<div id="content-header"><p>About the University</p></div>
 					<div id="navleft">
 						<div class="subnav"><a class="navlinks" href="#history" data-toggle="tab"><p>History</p></a></div>
 						<div class="subnav"><a class="navlinks" href="#administration" data-toggle="tab"><p>Administration</p></a></div>
