--- a/website/index.html
+++ b/website/index.html
@@ -68,16 +68,16 @@
               </ul>
               <li> <a href="academics.html">Academics</a> </li>
               <ul>
-                <li><a href="redesign/dir_academics/ug_programs.html">Degree Programs</a></li>
+                <li><a href="degreeprog.html">Degree Programs</a></li>
                 <li>Colleges/Departments</li>
-                <li><a href="redesign/dir_academics/depts.html">Library</a></li>
+                <li>Library</li>
                 <li>Summer Term</li>
                 <li>Academic Calendar</li>
               </ul>
-              <li> <a href="redesign/admissions.html">Admissions</a> </li>
+              <li> <a href="admissions.html">Admissions</a> </li>
               <ul>
-                <li><a href="redesign/dir_admissions/add_ug.html">Undergraduate</a></li>
-                <li>Graduate</li>
+                <li>Undergraduate</li>
+                <li><a href="graduatead.html">Graduate</a></li>
                 <li>Student Affairs</li>
                 <li>Financial Aid</li>
                 <li>Apply Now</li>
@@ -93,7 +93,7 @@
               </ul>
               <li>Campus Life</li>
               <ul>
-                <li>Get Involved</li>
+                <li><a href="getinvolv.html">Get Involved</a></li>
                 <li>Athletics</li>
                 <li>Student Activities</li>
                 <li>Housing & Dining</li>
