--- a/website/campuslife.html
+++ b/website/campuslife.html
@@ -44,16 +44,16 @@
 			</ul>
 
 			<div class="tab-content">
-			  <div class="tab-pane active" id="academics">
+			  <div class="tab-pane active" id="campuslife">
 			  	<div id="content-container">
-			  		<div id="content-header"><p>Academics</p></div>
+			  		<div id="content-header"><p>Campus Life</p></div>
 					<div id="navleft">
-						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Programs of Study</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>School/Colleges</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Academic Calendar</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Library</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Summer Term</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#provost" data-toggle="tab"><p>Office of the Provost</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Get Involved</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>Athletics</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Student Activities</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Housing & Dining</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Safety</p></a></div>
+						
 					</div>
 					<div class="content">
 						<img id="content-pic" src="img/about-3.jpg"/>
@@ -64,7 +64,7 @@
  -->
 						<h4 id="content-text-top">"GSU's academic environment inspires students and scholars to ask key questions and uncover unexpected results"-GSU student</h4>
 						<p>
-Finding ways to get involved in campus life is key to a successful college experience. Georgia State offers a wealth of resources to help you connect with other students and find your passion. Check out some of these options and get connected.</p>
+						Finding ways to get involved in campus life is key to a successful college experience. Georgia State offers a wealth of resources to help you connect with other students and find your passion. Check out some of these options and get connected.</p>
 
 					
 					</div>
