--- a/website/about.html
+++ b/website/about.html
@@ -86,13 +86,54 @@
 			</div>
 		</div>
 		<footer>
-			<div>
+			<div class="footer-div-a">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>Students</h6></a></li>
+					<li><a href = "#"><h6>Parents</h6></a></li>
+					<li><a href = "#"><h6>Alumni</h6></a></li>
+					<li><a href = "#"><h6>Faculty</h6></a></li>
+					<li><a href = "#"><h6>Visitors</h6></a></li>
+				</ul>							
 			</div>
-			<div>
+			<div class="footer-div">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>About</h6></a></li>
+					<li><a href = "#"><h6>Admissions</h6></a></li>
+					<li><a href = "#"><h6>Academics</h6></a></li>
+					<li><a href = "#"><h6>Research</h6></a></li>
+					<li><a href = "#"><h6>Campus Life</h6></a></li>
+				</ul>
 			</div>
-			<div>
+			<div class="footer-div">
+				<img src="img/logo.png">
 			</div>
-			<div>
+			<div class="footer-div-a">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>Search</h6></a></li>
+					<li><a href = "#"><h6>Directory</h6></a></li>
+					<li><a href = "#"><h6>Maps</h6></a></li>
+					<li><a href = "#"><h6>Contact</h6></a></li>
+					<li><a href = "#"><h6>Emergency info</h6></a></li>
+				</ul>
+			</div>
+			<div class="footer-div">
+				<h6> Georgia State University <br></br> Atlanta. CA 30302 <br></br> (404) 413-2000 </h6>
+			</div>
+<!-- 
+			<div id="social-media">
+				<div class="icons"><a href="http://www.youtube.com/channel/UCpDtOZmGitIVXytVrjJL7LQ"><img src="img/youtube.png"/></a></div>
+				<div class="icons"><a href="https://www.facebook.com/GeorgiaStateUniversity"><img src="img/facebook.png"/></a></div>
+				<div class="icons"><a href="https://twitter.com/GeorgiaStateU"><img src="img/twitter.png"/></a></div>
+			</div>
+ -->
+			<div id="social-media">
+				<a href="http://www.youtube.com/channel/UCpDtOZmGitIVXytVrjJL7LQ"><img src="img/youtube.png"/></a>
+				<a href="https://www.facebook.com/GeorgiaStateUniversity"><img src="img/facebook.png"/></a>
+				<a href="https://twitter.com/GeorgiaStateU"><img src="img/twitter.png"/></a>
+			</div>
+
+			<div id="copyright">
+				<p> &copy 2014 Georgia State University </p8>
 			</div>
 		</footer>
     	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
