--- a/website/academics.html
+++ b/website/academics.html
@@ -56,27 +56,8 @@
 											</div>
 					<div class="content">
 						<img id="content-pic" src="img/about-3.jpg"/>
-<!-- 
-						<div id="facts">
-							<div class="box-header">Facts</div>
-						</div>
- -->
 						<h4 id="content-text-top">"GSU's academic environment inspires students and scholars to ask key questions and uncover unexpected results"-GSU student</h4>
-						<p>Georgia State offers nearly 140 academic programs across its eight colleges, schools and institutes. A number of these programs and other university initiatives set the university apart from other urban public research universities, and we invite you to check out Georgia State’s Points of Distinction.
-
-						Georgia State is a national leader in graduating students from diverse backgrounds and has achieved national recognition for its commitment to students’ successful progress toward graduation.
-
-						Among its most popular majors are: accounting, finance, marketing and managerial services, biology, computer information systems/computer sciences, journalism, film and video, and psychology. The university also has a growing research portfolio, and is pioneering a number of interdisciplinary initiatives that include advanced brain imaging, diagnostics and therapeutics, atypical development and learning, and language research.
-
-						The provost is the chief academic and chief operations officer of this university.
-
-						The academic deans, the vice president for research and economic development, as well as student affairs, and the directors for centers and institutes, initiatives and programs report to Dr. Risa Palm.
-
-						Administrative leaders for for academic programs and enrollment, information systems and technology, institutional effectiveness, international initiatives, the ombudsperson and opportunity development/Affirmative Action also report to the provost.
-
-						The budgets of all of these units flow through the Office of the Provost. Palm chairs the University Senate Fiscal Advisory Committee to the President, the Capital Budget and Space Allocation Committee, the Dean’s Council and the Enrollment Management Subcommittee.
-
-						</p>
+						<p>Georgia State offers nearly 140 academic programs across its eight colleges, schools and institutes. A number of these programs and other university initiatives set the university apart from other urban public research universities, and we invite you to check out Georgia State’s Points of Distinction. Georgia State is a national leader in graduating students from diverse backgrounds and has achieved national recognition for its commitment to students’ successful progress toward graduation. Among its most popular majors are: accounting, finance, marketing and managerial services, biology, computer information systems/computer sciences, journalism, film and video, and psychology. The university also has a growing research portfolio, and is pioneering a number of interdisciplinary initiatives that include advanced brain imaging, diagnostics and therapeutics, atypical development and learning, and language research. The provost is the chief academic and chief operations officer of this university. The academic deans, the vice president for research and economic development, as well as student affairs, and the directors for centers and institutes, initiatives and programs report to Dr. Risa Palm. Administrative leaders for for academic programs and enrollment, information systems and technology, institutional effectiveness, international initiatives, the ombudsperson and opportunity development/Affirmative Action also report to the provost. The budgets of all of these units flow through the Office of the Provost. Palm chairs the University Senate Fiscal Advisory Committee to the President, the Capital Budget and Space Allocation Committee, the Dean’s Council and the Enrollment Management Subcommittee. </p>
 						
 					</div>
 			  	</div>
@@ -87,6 +68,50 @@
 			  <div class="tab-pane" id="campuslife">...</div>
 			</div>
 		</div>
+		<footer>
+			<div class="footer-div-a">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>Students</h6></a></li>
+					<li><a href = "#"><h6>Parents</h6></a></li>
+					<li><a href = "#"><h6>Alumni</h6></a></li>
+					<li><a href = "#"><h6>Faculty</h6></a></li>
+					<li><a href = "#"><h6>Visitors</h6></a></li>
+				</ul>							
+			</div>
+			<div class="footer-div">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>About</h6></a></li>
+					<li><a href = "#"><h6>Admissions</h6></a></li>
+					<li><a href = "#"><h6>Academics</h6></a></li>
+					<li><a href = "#"><h6>Research</h6></a></li>
+					<li><a href = "#"><h6>Campus Life</h6></a></li>
+				</ul>
+			</div>
+			<div class="footer-div">
+				<img src="img/logo.png">
+			</div>
+			<div class="footer-div-a">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>Search</h6></a></li>
+					<li><a href = "#"><h6>Directory</h6></a></li>
+					<li><a href = "#"><h6>Maps</h6></a></li>
+					<li><a href = "#"><h6>Contact</h6></a></li>
+					<li><a href = "#"><h6>Emergency info</h6></a></li>
+				</ul>
+			</div>
+			<div class="footer-div">
+				<h6> Georgia State University <br></br> Atlanta. CA 30302 <br></br> (404) 413-2000 </h6>
+			</div>
+			<div id="social-media">
+				<a href="http://www.youtube.com/channel/UCpDtOZmGitIVXytVrjJL7LQ"><img src="img/youtube.png"/></a>
+				<a href="https://www.facebook.com/GeorgiaStateUniversity"><img src="img/facebook.png"/></a>
+				<a href="https://twitter.com/GeorgiaStateU"><img src="img/twitter.png"/></a>
+			</div>
+
+			<div id="copyright">
+				<p> &copy 2014 Georgia State University </p8>
+			</div>
+		</footer>
     	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
