--- a/website/campuslife.html
+++ b/website/campuslife.html
@@ -57,16 +57,8 @@
 					</div>
 					<div class="content">
 						<img id="content-pic" src="img/about-3.jpg"/>
-<!-- 
-						<div id="facts">
-							<div class="box-header">Facts</div>
-						</div>
- -->
 						<h4 id="content-text-top">"GSU's academic environment inspires students and scholars to ask key questions and uncover unexpected results"-GSU student</h4>
-						<p>
-						Finding ways to get involved in campus life is key to a successful college experience. Georgia State offers a wealth of resources to help you connect with other students and find your passion. Check out some of these options and get connected.</p>
-
-					
+						<p> Finding ways to get involved in campus life is key to a successful college experience. Georgia State offers a wealth of resources to help you connect with other students and find your passion. Check out some of these options and get connected.</p>
 					</div>
 			  	</div>
 			  </div>
@@ -76,6 +68,50 @@
 			  <div class="tab-pane" id="campuslife">...</div>
 			</div>
 		</div>
+		<footer>
+			<div class="footer-div-a">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>Students</h6></a></li>
+					<li><a href = "#"><h6>Parents</h6></a></li>
+					<li><a href = "#"><h6>Alumni</h6></a></li>
+					<li><a href = "#"><h6>Faculty</h6></a></li>
+					<li><a href = "#"><h6>Visitors</h6></a></li>
+				</ul>							
+			</div>
+			<div class="footer-div">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>About</h6></a></li>
+					<li><a href = "#"><h6>Admissions</h6></a></li>
+					<li><a href = "#"><h6>Academics</h6></a></li>
+					<li><a href = "#"><h6>Research</h6></a></li>
+					<li><a href = "#"><h6>Campus Life</h6></a></li>
+				</ul>
+			</div>
+			<div class="footer-div">
+				<img src="img/logo.png">
+			</div>
+			<div class="footer-div-a">
+				<ul class ="footer-lists">
+					<li><a href = "#"><h6>Search</h6></a></li>
+					<li><a href = "#"><h6>Directory</h6></a></li>
+					<li><a href = "#"><h6>Maps</h6></a></li>
+					<li><a href = "#"><h6>Contact</h6></a></li>
+					<li><a href = "#"><h6>Emergency info</h6></a></li>
+				</ul>
+			</div>
+			<div class="footer-div">
+				<h6> Georgia State University <br></br> Atlanta. CA 30302 <br></br> (404) 413-2000 </h6>
+			</div>
+			<div id="social-media">
+				<a href="http://www.youtube.com/channel/UCpDtOZmGitIVXytVrjJL7LQ"><img src="img/youtube.png"/></a>
+				<a href="https://www.facebook.com/GeorgiaStateUniversity"><img src="img/facebook.png"/></a>
+				<a href="https://twitter.com/GeorgiaStateU"><img src="img/twitter.png"/></a>
+			</div>
+
+			<div id="copyright">
+				<p> &copy 2014 Georgia State University </p8>
+			</div>
+		</footer>
     	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 		<!-- Include all compiled plugins (below), or include individual files as needed -->
