--- a/website/admissions.html
+++ b/website/admissions.html
@@ -46,7 +46,7 @@
 			<div class="tab-content">
 			  <div class="tab-pane active" id="academics">
 			  	<div id="content-container">
-			  		<div id="content-header"><p>Academics</p></div>
+			  		<div id="content-header"><p>Admissions</p></div>
 					<div id="navleft">
 						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Undergraduates</p></a></div>
 						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>Graduates</p></a></div>
