--- a/website/degreeprog.html
+++ b/website/degreeprog.html
@@ -46,9 +46,9 @@
 			<div class="tab-content">
 			  <div class="tab-pane active" id="academics">
 			  	<div id="content-container">
-			  		<div id="content-header"><p>Academics</p></div>
+			  		<div id="content-header"><p>Degree Programs</p></div>
 					<div id="navleft">
-						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Programs of Study</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Degree Programs</p></a></div>
 						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>School/Colleges</p></a></div>
 						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Academic Calendar</p></a></div>
 						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Library</p></a></div>
