--- a/website/graduatead.html
+++ b/website/graduatead.html
@@ -46,14 +46,14 @@
 			<div class="tab-content">
 			  <div class="tab-pane active" id="academics">
 			  	<div id="content-container">
-			  		<div id="content-header"><p>Academics</p></div>
+			  		<div id="content-header"><p>Graduates</p></div>
 					<div id="navleft">
-						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Programs of Study</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>School/Colleges</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Academic Calendar</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Library</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Summer Term</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#provost" data-toggle="tab"><p>Office of the Provost</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Undergraduates</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>Graduates</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Student Affairs</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Financial Aid</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Apply Now</p></a></div>navlinks" href="#summer" data-toggle="tab"><p>Summer Term</p></a></div>
+						
 					</div>
 					<div class="content">
 						<img id="content-pic" src="img/about-3.jpg"/>
