--- a/website/about.html
+++ b/website/about.html
@@ -13,24 +13,48 @@
 		<link href= "css/home.css" rel = "stylesheet">
 	</head>
 	<body>
-	    <div id = "container">
-			<!--TOP navigation-->
-			<div class = "page-header">
-			  <ul class ="list-inline">
-				<li><a href = "#"><h5>Students</h5></a></li>
-				<li><a href = "#"><h5>Parents</h5></a></li>
-				<li><a href = "#"><h5>Alumni</h5></a></li>
-			  </ul>
+      <div class = "container"> <!--start of container-->
 
-			  <form class="navbar-form navbar-right" role="search">
-				<div class="form-group">
-				  <input type="text" class="form-control" placeholder="Search">
-				</div>
-				<button type="submit" class="btn btn-default">Submit</button>
-			  </form>
-			  <img src = "img/logo.png" id = "logo">
+        <!--TOP navigation-->
 
-			</div>
+        <nav class="navbar navbar-inverse" role="navigation">
+          <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+            </div>
+
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="#">Students</a></li>
+                <li><a href="#">Faculty/Staff</a></li>
+                <li><a href="#">Alumni</a></li>
+              </ul>
+
+              <form class="navbar-form navbar-right" role="search">
+                <div class="form-group">
+                  <input type="text" class="form-control" placeholder="Search">
+                </div>
+                <button type="submit" class="btn btn-default">Submit</button>
+              </form>
+              
+            </div><!-- /.navbar-collapse -->
+          </div><!-- /.container-fluid -->
+        </nav>
+
+        <!--/TOP navigation-->
+
+        <div class = "page-header">
+          
+          <a href = "home.html"><img src = "img/logo.png" id = "logo"></a>
+
+        </div>
 
 			<!--/TOP navigation-->
 	
