--- a/website/getinvolv.html
+++ b/website/getinvolv.html
@@ -69,14 +69,14 @@
 			<div class="tab-content">
 			  <div class="tab-pane active" id="academics">
 			  	<div id="content-container">
-			  		<div id="content-header"><p>Academics</p></div>
+			  		<div id="content-header"><p>Get Involved</p></div>
 					<div id="navleft">
-						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Programs of Study</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>School/Colleges</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Academic Calendar</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Library</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Summer Term</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#provost" data-toggle="tab"><p>Office of the Provost</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Get Involved</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>Athletics</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Student Activities</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Housing & Dining</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Safety</p></a></div>
+						
 					</div>
 					<div class="content">
 						<img id="content-pic" src="img/about-3.jpg"/>
