--- a/website/research.html
+++ b/website/research.html
@@ -71,11 +71,11 @@
 			  	<div id="content-container">
 			  		<div id="content-header"><p>Research</p></div>
 					<div id="navleft">
-						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Get Involved</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>Athletics</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Student Activities</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Housing & Dining</p></a></div>
-						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Safety</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Institutes & Centers</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>Research at GSU</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#calendar" data-toggle="tab"><p>Opportunities</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#library" data-toggle="tab"><p>Funding</p></a></div>
+						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>News</p></a></div>
 						
 					</div>
 					<div class="content">
