--- a/website/degreeprog.html
+++ b/website/degreeprog.html
@@ -69,7 +69,7 @@
 			<div class="tab-content">
 			  <div class="tab-pane active" id="academics">
 			  	<div id="content-container">
-			  		<div id="content-header"><p>Academics</p></div>
+			  		<div id="content-header"><p>Programs of Study</p></div>
 					<div id="navleft">
 						<div class="subnav"><a class="navlinks" href="#degreeprograms" data-toggle="tab"><p>Programs of Study</p></a></div>
 						<div class="subnav"><a class="navlinks" href="#school" data-toggle="tab"><p>School/Colleges</p></a></div>
