--- a/website/academics.html
+++ b/website/academics.html
@@ -77,7 +77,7 @@
 						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Summer Term</p></a></div>
 											</div>
 					<div class="content">
-						<img id="content-pic" src="img/about-3.jpg"/>
+						<img id="content-pic" src="img/img.jpg"/>
 <!-- 
 						<div id="facts">
 							<div class="box-header">Facts</div>
