--- a/website/admissions.html
+++ b/website/admissions.html
@@ -78,15 +78,14 @@
 						
 					</div>
 					<div class="content">
-						<img id="content-pic" src="img/about-3.jpg"/>
+						<img id="content-pic" src="img/img.jpg"/>
 <!-- 
 						<div id="facts">
 							<div class="box-header">Facts</div>
 						</div>
  -->
-						<h4 id="content-text-top">"GSU's academic environment inspires students and scholars to ask key questions and uncover unexpected results"-GSU student</h4>
+						<h4 id="content-text-top">The fall 2014 application is open! The fall 2014 application for undergraduate admissions is available. Submit your application today!</h4>
 						<p>Georgia State offers nearly 140 academic programs across its eight colleges, schools and institutes. A number of these programs and other university initiatives set the university apart from other urban public research universities, and we invite you to check out Georgia State’s Points of Distinction.
-
 
 						</p>
 						
