--- a/website/campuslife.html
+++ b/website/campuslife.html
@@ -79,7 +79,7 @@
 						
 					</div>
 					<div class="content">
-						<img id="content-pic" src="img/about-3.jpg"/>
+						<img id="content-pic" src="img/img.jpg"/>
 <!-- 
 						<div id="facts">
 							<div class="box-header">Facts</div>
