--- a/website/degreeprog.html
+++ b/website/degreeprog.html
@@ -52,7 +52,7 @@
 
         <div class = "page-header">
           
-          <a href = "home.html"><img src = "img/logo.png" id = "logo"></a>
+          <a href = "home.html"><img src = "img/img.png" id = "logo"></a>
 
 
 			<!--/TOP navigation-->
@@ -79,26 +79,14 @@
 						<div class="subnav"><a class="navlinks" href="#provost" data-toggle="tab"><p>Office of the Provost</p></a></div>
 					</div>
 					<div class="content">
-						<img id="content-pic" src="img/about-3.jpg"/>
+						<img id="content-pic" src="img/img.jpg"/>
 <!-- 
 						<div id="facts">
 							<div class="box-header">Facts</div>
 						</div>
  -->
-						<h4 id="content-text-top">"GSU's academic environment inspires students and scholars to ask key questions and uncover unexpected results"-GSU student</h4>
-						<p>Georgia State offers nearly 140 academic programs across its eight colleges, schools and institutes. A number of these programs and other university initiatives set the university apart from other urban public research universities, and we invite you to check out Georgia State’s Points of Distinction.
-
-						Georgia State is a national leader in graduating students from diverse backgrounds and has achieved national recognition for its commitment to students’ successful progress toward graduation.
-
-						Among its most popular majors are: accounting, finance, marketing and managerial services, biology, computer information systems/computer sciences, journalism, film and video, and psychology. The university also has a growing research portfolio, and is pioneering a number of interdisciplinary initiatives that include advanced brain imaging, diagnostics and therapeutics, atypical development and learning, and language research.
-
-						The provost is the chief academic and chief operations officer of this university.
-
-						The academic deans, the vice president for research and economic development, as well as student affairs, and the directors for centers and institutes, initiatives and programs report to Dr. Risa Palm.
-
-						Administrative leaders for for academic programs and enrollment, information systems and technology, institutional effectiveness, international initiatives, the ombudsperson and opportunity development/Affirmative Action also report to the provost.
-
-						The budgets of all of these units flow through the Office of the Provost. Palm chairs the University Senate Fiscal Advisory Committee to the President, the Capital Budget and Space Allocation Committee, the Dean’s Council and the Enrollment Management Subcommittee.
+						<h4 id="content-text-top">Degrees and Majors</h4>
+						<p>You can choose from dozens of nationally ranked and recognized academic programs and more than 200 majors and minors at the university that offers the widest variety of fields of study in Georgia.
 
 						</p>
 						
