--- a/website/research.html
+++ b/website/research.html
@@ -79,15 +79,19 @@
 						
 					</div>
 					<div class="content">
-						<img id="content-pic" src="img/about-3.jpg"/>
+						<img id="content-pic" src="img/img.jpg"/>
 <!-- 
 						<div id="facts">
 							<div class="box-header">Facts</div>
 						</div>
  -->
-						<h4 id="content-text-top">"GSU's academic environment inspires students and scholars to ask key questions and uncover unexpected results"-GSU student</h4>
-						<p>
-						Finding ways to get involved in campus life is key to a successful college experience. Georgia State offers a wealth of resources to help you connect with other students and find your passion. Check out some of these options and get connected.</p>
+						<h4 id="content-text-top">Vice President for Research & Economic Development
+James A. Weyhenmeyer, Ph.D.</h4>
+<p>As the Vice President for Research and Economic Development at Georgia State University James Weyhenmeyer has responsibility for managing the university’s research portfolio and economic development activities. Immediately prior to joining the Georgia State community, he was the Senior Vice Provost for Research and Economic Development at the State University of New York and the Vice President for Research at the State University of New York Research Foundation.</p>
+
+<p>Dr. Weyhenmeyer is an experienced senior administrator having held several executive administrative appointments, including posts as the Associate Vice President for Economic Development and Corporate Relations and Vice President for Technology and Economic Development at the University of Illinois. He was the founding Managing Director and CEO of Illinois VENTURES, LLC, an early-stage venture capital firm focused on the development of technology-based companies. His area of investment expertise is in the life sciences sector, including therapeutics, diagnostics and medical devices. He is a serial entrepreneur, having served in management positions for companies in the medical device, drug delivery and drug development sectors. He continues to serve as a scientific advisor for technology-based companies and a consultant for early-stage investment due diligence and business start-ups. He serves on a number of public and private boards of directors and is leading an effort for the American Heart Association to launch a Science Accelerator Fund that will reduce the time to market for groundbreaking discoveries that will impact the diagnosis and treatment of cardiovascular disease and stroke.</p>
+
+<p>Dr. Weyhenmeyer is also an accomplished scientist having published widely in the areas of cardiovascular disease and stroke. He has been funded by the National Institutes of Health, the National Science Foundation, the American Heart Association, the PHARMA Foundation and private industry. He has received many awards and honors for his research, most recently the American Heart Association’s Meritorious Achievement Award for research and service. He is a Professor of Neuroscience and Biology at Georgia State University and continues to hold an appointment as Adjunct Professor of Cell Biology, Neuroscience and Pathology at the University of Illinois. He is a member of several honorary societies, including the Royal Academy of Engineering Sciences. Dr. Weyhenmeyer received his B.A. from Knox College, a Ph.D. from Indiana University and did his postdoctoral training in the Departments of Medicine and Physiology and Biophysics at the University of Iowa.</p>
 
 					
 					</div>
