--- a/website/degreeprog.html
+++ b/website/degreeprog.html
@@ -79,7 +79,7 @@
 						<div class="subnav"><a class="navlinks" href="#provost" data-toggle="tab"><p>Office of the Provost</p></a></div>
 					</div>
 					<div class="content">
-						<img id="content-pic" src="img/img.jpg"/>
+						<img id="content-pic" src="img/img.png"/>
 <!-- 
 						<div id="facts">
 							<div class="box-header">Facts</div>
