--- a/website/graduatead.html
+++ b/website/graduatead.html
@@ -78,7 +78,7 @@
 						<div class="subnav"><a class="navlinks" href="#summer" data-toggle="tab"><p>Apply Now</p></a></div>
 					</div>
 					<div class="content">
-						<img id="content-pic" src="img/img.jpg"/>
+						<img id="content-pic" src="img/img.png"/>
 <!-- 
 						<div id="facts">
 							<div class="box-header">Facts</div>
