--- a/website/index.html
+++ b/website/index.html
@@ -83,7 +83,7 @@
                 <li>Apply Now</li>
                 
               </ul>
-              <li>Research</li>
+              <li><a href = "research.html">Research</a></li>
               <ul>
                 <li>Research at GSU</li>
                 <li>Institutes & Centers</li>
@@ -91,7 +91,7 @@
                 <li>Funding</li>
                 <li>News</li>
               </ul>
-              <li>Campus Life</li>
+              <li><a href = "campuslife.html">Campus Life</a></li>
               <ul>
                 <li><a href="getinvolv.html">Get Involved</a></li>
                 <li>Athletics</li>
