--- a/website/about.html
+++ b/website/about.html
@@ -35,6 +35,7 @@
                 <li><a href="#">Students</a></li>
                 <li><a href="#">Faculty/Staff</a></li>
                 <li><a href="#">Alumni</a></li>
+                <li><a href="#">Parents</a></li>
               </ul>
 
               <form class="navbar-form navbar-right" role="search">
@@ -52,7 +53,7 @@
 
         <div class = "page-header">
           
-          <a href = "home.html"><img src = "img/logo.png" id = "logo"></a>
+          <center><a href = "home.html"><img src = "img/logo.png" id = "logo"></a></center>
 
         </div>
 
@@ -60,12 +61,21 @@
 	
 			<!--MAIN navigation-->
 			<ul class="nav nav-tabs nav-justified">
-			  <li class="active"><a href="#about" data-toggle="tab"><a href = "about.html">About</a></a></li>
-			  <li><a href="#admissions" data-toggle="tab"><a href = "admissions.html">Admissions</a></a></li>
-			  <li><a href="#academics" data-toggle="tab"><a href = "academics.html">Academics</a></a></li>
-			  <li><a href="#research" data-toggle="tab"><a href = "research.html">Research</a></a></li>
-			  <li><a href="#campuslife" data-toggle="tab"><a href = "campuslife.html">Campus Life</a></a></li>
+			  <li class="active"><a href = "about.html">About</a></li>
+			  <li><a href = "admissions.html">Admissions</a></li>
+			  <li><a href = "academics.html">Academics</a></li>
+			  <li><a href = "research.html">Research</a></li>
+			  <li><a href = "campuslife.html">Campus Life</a></li>
 			</ul>
+
+
+
+
+
+
+
+
+
 
 			<div class="tab-content">
 			  <div class="tab-pane active" id="about">
